# Sage-SherlockGenAI.exe

./: .gitignore  EXECUTIVE_HARDENING_PLAN.md  ProblemStatement  README.md  SAGE_RUNBOOK.md  deploy.ps1
sage/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
sage/agents/: calendar_agent.py  knowledge_agent.py  notification_agent.py  orchestrator.py  planner_agent.py  runtime.py  task_agent.py
sage/api/: adk_runtime.py  error_handling.py  main.py
sage/api/routes/: brief.py  debrief.py  meeting_workspace.py  plan.py  tasks.py
sage/auth/: google_oauth.py
sage/config/: settings.py
sage/data/: mock_tasks.json
sage/data/mock_notes/: sample_meeting_notes.md
sage/db/: models.py  session.py
sage/frontend/: index.html  package-lock.json  package.json  vite.config.js
sage/frontend/src/: App.jsx  index.css
sage/frontend/src/api/: sage.js
sage/frontend/src/components/: EventCard.jsx  MetricRing.jsx  SagePanel.jsx  Sidebar.jsx  TaskCard.jsx
sage/frontend/src/data/: mockEvents.js  mockTasks.js  productivityTips.js
sage/frontend/src/hooks/: useSageApi.js
sage/frontend/src/screens/: Debrief.jsx  Insights.jsx  MeetingBrief.jsx  Tasks.jsx  Today.jsx  WeekPlanner.jsx
sage/mcp_server/: server.py
sage/prompts/: calendar_agent.txt  knowledge_agent.txt  orchestrator.txt  planner_agent.txt  task_agent.txt
sage/services/: __init__.py  agent_runner.py  demo_data.py  meeting_workspace.py
sage/tools/: calendar_tools.py  knowledge_tools.py  notification_tools.py  task_tools.py
