[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage"
version = "0.1.0"
description = "Proactive multi-agent productivity assistant for Google Workspace"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = [".."]
include = ["sage*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
